# AxmolFighter-Server

./: .gitignore
battle/: CMakeLists.txt
battle/config/: battle.toml  battle_2.toml
battle/src/: BattleConfigLoader.cpp  BattleConfigLoader.h  BattleServer.cpp  BattleServer.h  main.cpp
battle/src/async/: Task.h
battle/src/framework/: BackendClient.cpp  BackendClient.h  BackendCodec.cpp  BackendCodec.h  Logger.cpp  Logger.h  Protocol.h  RpcManager.cpp  RpcManager.h
battle/src/net/: GatewayClient.cpp  GatewayClient.h
game/: Cargo.toml
game/backend-framework/: Cargo.toml
game/backend-framework/src/: bootstrap.rs  codec.rs  delegate.rs  gateway_client.rs  handler.rs  lib.rs  rpc.rs  server_source.rs  service_id.rs  session.rs  session_delegate.rs  wire.rs
game/base/: Cargo.toml
game/base/src/net/: net_session.rs  tls.rs  udp_server.rs  udp_session.rs  ws_async_io.rs
game/game/: .env  Cargo.toml  game.toml
game/game/migrations/: 20260616000001_create_accounts.sql  20260617000002_create_character_inventory_schema.sql
game/game/src/: codec.rs  config.rs  error_code.rs  gateway_client.rs  handler.rs  main.rs  server_source.rs  wire.rs
game/game/src/game_shared/: data.rs  mod.rs  rpc.rs
game/game/src/handler/: db.rs  framework.rs
game/game/src/player/: account.rs  battle.rs  character.rs  framework.rs  mod.rs
game/gateway/: Cargo.toml  README.md  gateway.toml
game/gateway/src/: bind_manager.rs  client_listener.rs  codec.rs  config.rs  context.rs  frame_cmd.rs  internal_listener.rs  main.rs  protocol.rs  router.rs  server_registry.rs  session.rs
game/protocol/: Cargo.toml  build.rs
game/protocol/pb/: game.proto  gateway.proto
game/protocol/src/: game.rs  gateway.rs  lib.rs  message_map.rs
game/town/: Cargo.toml
game/town/src/: delegate.rs  main.rs
