[package]
name = "backend-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
protocol = { path = "../protocol" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
dashmap = "6"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
