[package]
name = "base"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
kcp = ["tokio_kcp"]
ws = ["tokio-tungstenite"]
quic = ["s2n-quic", "s2n-quic-core"]

[dependencies]
bytes = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26" }
log = "0.4"
async-trait = "0.1"
anyhow = "1.0"
dashmap = "6"
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git", optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }
s2n-quic = { version = "1.69.0", optional = true }
s2n-quic-core = { version = "0.69.0", optional = true }
futures = "0.3"
