[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
protocol = { path = "../protocol" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
dashmap = "6"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
