[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
