[package]
name = "town"
version = "0.1.0"
edition = "2024"

[dependencies]
backend-framework = { path = "../backend-framework" }
base = { path = "../base" }
protocol = { path = "../protocol" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
